# get-shredded

./: .gitignore  README.md  pyproject.toml
configs/: compare_shred_vs_dmd.yaml  cross_val_robust.yaml  cylinder_baseline.yaml  default.yaml  robust_shred.yaml  robustness_comparison.yaml  sweep_num_sensors.yaml
configs/noise/: disabled.yaml  per_sensor.yaml
outputs/Report/: experiments_note.md
outputs/Report/DTU_Poster/: main.tex
outputs/cylinder/cross_val_robust/: cv_results.npz
outputs/cylinder/cross_val_robust/investigation/: investigation.npz
outputs/cylinder/robustness/: sweep_results.npz  table.md  table.tex
outputs/cylinder/robustness/sensors_3_QR/: results.npz
outputs/cylinder/robustness/sensors_3_random/: results.npz
outputs/cylinder/robustness/sensors_5_QR/: results.npz
outputs/cylinder/robustness/sensors_5_random/: results.npz
outputs/cylinder/robustness/sensors_8_QR/: results.npz
outputs/cylinder/robustness/sensors_8_random/: results.npz
scripts/: compare_shred_vs_dmd.py  cross_val_robust.py  eval_cross_placement.py  investigate_seeds.py  run_cylinder_baseline.py  run_robust_shred.py  run_robustness_comparison.py  sweep_num_sensors.py  visualize_model.py
src/get_shredded/: __init__.py  augmentation.py  baseline.py  data.py  experiment.py  model.py  noise.py  plotting.py  robust_eval.py  robust_experiment.py  robust_model.py  robust_train.py  train.py
