[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "get-shredded"
version = "0.1.0"
description = "Minimal SHRED baseline for cylinder-vortex data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "hydra-core>=1.3",
  "torch>=2.1",
  "pyyaml>=6.0",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "pillow>=10.0",
  "tqdm>=4.66",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
